# sayswho

./: .gitignore  README.md  pyproject.toml  requirements.txt  template.html
sayswho/: attribution_helpers.py  constants.py  quote_helpers.py  quotes.py  sayswho.py
src/sayswho/: __init__.py  attribution_helpers.py  constants.py  helpers.py  manual_ents.json  quote_finder.py  quote_helpers.py  quotes.py  sayswho.py
tests/: _test_article_helpers.py  _test_qa.py  _test_saved_files.py  conftest.py  qa_test_file.txt  test_attributor.py  test_ner.py  test_quote_finder.py  test_viz.html
tests/quote_parse_test_files/: 5SVW-WWP1-JC6P-C282-00000-00.txt  5TJH-PJG1-DY6J-M3TM-00000-00.txt  5V2D-0531-JBM5-R4GP-00000-00.txt  5V49-J6V1-JC0C-J46G-00000-00.txt  5V5C-JVP1-DY37-F4FC-00000-00.txt  5W5S-BDS1-JBM5-R229-00000-00.txt  5W64-5441-DYTG-S3T7-00000-00.txt  5WXW-GBY1-JBRS-Y2HX-00000-00.txt  5X4C-PYG1-DYJT-21WJ-00000-00.txt  5X5X-VPT1-DYNS-33VS-00000-00.txt  601N-VP41-JC8R-301M-00000-00.txt  60DY-RN71-DYTM-N0M2-00000-00.txt  620B-S7K1-DY37-F2V0-00000-00.txt  642J-V391-DYRK-B1WM-00000-00.txt  65RN-WFC1-DY8S-B509-00000-00.txt  65SG-FK31-JC3R-B541-00000-00.txt
