[tool.poetry]
name = "sayswho"
version = "0.1.0"
description = ""
authors = ["Andy Friedman <afriedman412@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rapidfuzz = "^3.1.1"
regex = "^2023.6.3"
spacy = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
