[tool.poetry]
name = "sayswho"
version = "0.1.4"
license = "MIT"
description = "Quote identification, attribution and resolution."
authors = ["Andy Friedman <afriedman412@gmail.com>"]
readme = "README.md"
repository = "https://github.com/afriedman412/sayswho"
keywords = ["nlp", "natural-language-processing", "spacy"]

[tool.poetry.dependencies]
python = "^3.9"
rapidfuzz = "^3.1.1"
regex = "^2023.6.3"
spacy = "^3.6.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"